# buteo-sync-plugins-google

./: .gitignore  CMakeLists.txt  GAuth.cpp  GAuth.h  GContact.cpp  GContact.h  GContactClient.cpp  GContactClient.h  GTransport.cpp  GTransport.h  README  buteo-gcontact-plugin.pro  buteo-gcontact-plugin_global.h  buteo-sync-plugins-google.pro
accounts/: CMakeLists.txt
atom/: Atom.cpp  Atom.h  atom.pro  atom_global.h
buteo-contact-client/: CMakeLists.txt  UAbstractRemoteSource.cpp  UAbstractRemoteSource.h  UAuth.cpp  UAuth.h  UContactInfo.cpp  UContactInfo.h  UContactsBackend.cpp  UContactsBackend.h  UContactsClient.cpp  UContactsClient.h  UContactsCustomDetail.cpp  UContactsCustomDetail.h
contacts/: buteo-gcontact-plugin.pro  contacts.pro
contacts/src/: CMakeLists.txt  GAtom.cpp  GAtom.h  GAuth.cpp  GAuth.h  GConfig.cpp  GConfig.h  GContactClient.cpp  GContactClient.h  GContactCustomDetail.cpp  GContactCustomDetail.h  GContactDetail.h  GContactEntry.cpp  GContactEntry.h  GContactsBackend.cpp  GContactsBackend.h  GContactsClient.cpp  GContactsClient.h  GParseStream.cpp  GParseStream.h  GRemoteSource.cpp  GRemoteSource.h  GTransport.cpp  GTransport.h  GWriteStream.cpp  GWriteStream.h  buteo-gcontact-plugin_global.h  src.pro
contacts/src/xmls/services/: googlecontacts.service
contacts/src/xmls/sync/: CMakeLists.txt  google-sync.xml  google.com.xml
contacts/unittests/: GAtomTest.cpp  GAtomTest.h  GContactClientTest.cpp  GContactClientTest.h  GContactsBackendTest.cpp  GContactsBackendTest.h  GParseStreamTest.cpp  GParseStreamTest.h  GTransportTest.cpp  GWriteStreamTest.cpp  GWriteStreamTest.h  contact_v3.xml  google-sync.service  google.provider  main.cpp  runstarget.sh  tests.xml  unittests.pro
contacts/unittests/scripts/: access_token.txt  auth_result.txt  get_photo.sh  oauth_contacts.sh  oauth_get_token.sh
rpm/: buteo-sync-plugins-google.spec
src/: Atom.cpp  Atom.h  GAtom.cpp  GAtom.h  GAuth.cpp  GAuth.h  GContactClient.cpp  GContactClient.h  GContactCustomDetail.cpp  GContactEntry.cpp  GContactEntry.h  GContactTags.h  GContactsBackend.cpp  GContactsBackend.h  GParseStream.cpp  GParseStream.h  GTransport.cpp  GTransport.h  ParseStream.cpp  ParseStream.h  src.pro
unittests/: GParseStreamTest.cpp  GParseStreamTest.h  GTransportTest.cpp  GTransportTest.h  main.cpp  unittests.pro
unittests/scripts/: access_token.txt  auth_result.txt  get_contacts.sh
xmls/sync/: google.com.xml
